tests/NormalTests/paczka1/fuzzy1/56771758.err
Error in line 6: 3s4ekF S887 64,5
Error in line 5: zxsZcUl6wE S403 59,5
Error in line 8: 3s4ekF S403 50,2
